# IPv6Addr

./: .travis.yml  CHANGELOG.md  IPv6Addr.cabal  LICENSE  README.md  stack.yaml
.github/workflows/: haskell-ci.yml
Text/: .IPv6Addr.hs.swp  IPv6Addr.hs
Text/IPv6Addr/: Internal.hs  Internals.hs  Manip.hs  Types.hs  Utils.hs
src/Text/: IPv6Addr.hs
tests/: Main.hs
