name:               IPv6Addr
version:            3.0.0.0
synopsis:           Library to deal with IPv6 address text representations.
description:
  Library to deal with IPv6 address text representations, canonization and manipulations.

homepage:           https://github.com/MichelBoucey/IPv6Addr
license:            BSD3
license-file:       LICENSE
author:             Michel Boucey
maintainer:         michel.boucey@gmail.com
copyright:          (c) 2011-2026 - Michel Boucey
category:           Network
build-type:         Simple
extra-source-files: README.md
extra-doc-files:    CHANGELOG.md
cabal-version:      >=1.10
tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2
   || ==9.14.1

source-repository head
  type:     git
  location: https://github.com/MichelBoucey/IPv6Addr.git

library
  hs-source-dirs:   src/
  exposed-modules:  Text.IPv6Addr
  other-extensions: OverloadedStrings
  build-depends:
      aeson         >=2.2.3 && <2.4
    , attoparsec    >=0.12  && <0.15
    , base          >=4.8   && <5
    , iproute       >=1.3   && <1.8
    , network       >=2.5   && <4
    , network-info  >=0.2   && <0.3
    , random        >=1.0   && <1.4
    , text          >=1.1   && <2.2

  default-language: Haskell2010
  ghc-options:      -Wall

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          Main.hs
  build-depends:
      base
    , HUnit
    , IPv6Addr
    , test-framework
    , test-framework-hunit
